--- a/nestedheader/package.json
+++ b/nestedheader/package.json
@@ -14,6 +14,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "framer-motion": "^12.4.7",
+    "lucide": "^0.476.0",
+    "lucide-react": "^0.476.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
